--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-navigation')
+    implementation project(':react-native-svg')
+    implementation project(':react-native-background-fetch')
     implementation 'com.android.support:design:27.1.0'
 }
 
