--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNNav2",
+  "name": "rnnav2",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,10 @@
     "react": "16.6.3",
     "react-dom": "^16.8.1",
     "react-native": "0.57.8",
+    "react-native-background-fetch": "^2.7.1",
     "react-native-navigation": "^2.8.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-svg": "^9.10.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
