--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-background-fetch": "^2.7.1",
     "react-native-navigation": "^2.8.0",
     "react-native-shadow": "^1.2.2",
+    "react-native-sound": "^0.11.0",
     "react-native-svg": "^9.10.2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
